modulo de armado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.mvc.static-path-pattern=/**
 spring.web.resources.static-locations=classpath:/static/
 
-# Configuración de Thymeleaf
+# Configuraciï¿½n de Thymeleaf
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
